# agentrunner

./: .env.example  .gitguardian.yaml  .gitignore  Dockerfile.autonomous-pool  Dockerfile.base  Dockerfile.collaborative-pool  Dockerfile.config-service  Dockerfile.continuous-runner  Dockerfile.orchestrator  Dockerfile.scheduler  Dockerfile.slack-gateway  Dockerfile.state-manager  EXTENSIBILITY_VALIDATION.md  README.md  SECURITY.md  SECURITY_IMPROVEMENTS.md  VALIDATION_REPORT.md  alembic.ini  docker-compose.state-manager.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  test_config_service.py  test_event_bus.py  test_extensibility.py  test_state_manager.py
alembic/: env.py
alembic/versions/: 4990121b40b7_initial_schema_with_agent_states_.py
config/agents/: customer-support.yml  daily-reporter.yml  data-analyzer.yml  health-monitor.yml  research-team.yml
docs/: 00-research-and-technology-proposal.md  01-blueprint.md  02-requirements.md  03-design.md  04-tasks-OLD.md  04-tasks.md  05-validation.md  06-future-considerations.md  AGENT_DEVELOPMENT_GUIDE.md  API_REFERENCE.md  CONFIGURATION_REFERENCE.md  FUTURE_PERFORMANCE_TESTING.md  OPERATIONS_GUIDE.md  README.md  TROUBLESHOOTING_GUIDE.md
src/agents/: __init__.py  autonomous_agent_pool.py  collaborative_agent_pool.py  continuous_agent_runner.py
src/config/: README.md  __init__.py  api.py  configuration_service.py  models.py
src/integrations/: __init__.py  api.py  slack_gateway.py
src/llm/: provider_factory.py
src/llm/providers/: base.py  (+5 more)
src/messaging/: README.md  __init__.py  event_bus.py  events.py
src/orchestrator/: __init__.py  agent_orchestrator.py  api.py
src/scheduler/: __init__.py  api.py  scheduler_service.py
src/utils/: logger.py
